made corrections to alignment

--- a/wwr/styles/style.css
+++ b/wwr/styles/style.css
@@ -29,13 +29,12 @@
 
 #hero_img {
   width: 100%;
-  max-width: 800px;
   height: auto;
   display: block;
   margin: 0 auto;
 }
 
-#logo {
+.logo {
   width: 80px;
   height: auto;
 }
@@ -126,13 +125,12 @@ main section {
 
 #background {
   height: 725px;
-  background-color: var(--secondary-color); /* changed from white to secondary color */
+  background-color: var(--secondary-color);
 }
 
 footer {
   background-color: var(--primary-color);
   color: var(--headline-color-on-color);
-  text-align: center;
   padding: 20px;
   font-family: var(--paragraph-font);
 }
